# playdate-explorer

./: .gitattributes  LICENSE  README.md
app/: .gitignore  CMakeLists.txt
app/src/: main.c  memory.c  pdexplorer.h  testrunner.c  tests.def  tests.h
app/src/tests/: cache.c  cache_icachesize.c  cache_linesize.c  cache_size.c  cpu_mhz.c  func.def  func1k.def  memory.c  mov.def
